<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlarmMpdRemote</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="content_wrong_settings">Wrong connection setttings </string>


    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="key">Key</string>
    <string name="stars">****</string>

</resources>
