<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/host" />

    <TextView
        android:id="@+id/tv_sub_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/tv_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/port"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_sub_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_sub_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_sub_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/stars"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:layout_width="fill_parent"
        android:layout_height=".1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/tv_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:text="@string/key"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_sub_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onClick"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
